Fix T62736: Inconsistent behavior bpy.utils.user_resource()

If a subfolder was specified which didn't exist, logic would fallback
to get_path_user (instead of get_path_environment).

Now always use the from the environment variable if it's set and exists.